<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">soil fertility</string>

    <string name="menu_settings">Settings</string>
    <string name="Fragment1">New Calculation</string>
    <string name="Fragment2">Previous Calculations</string>
    <string name="drawer_open"></string>
    <string name="drawer_close"></string>
    <string name="hint_farmer">farmer name</string>
    <string name="hint_crop">Choose a crop</string>
    <string name="hint_landsize">land size</string>
    <string name="hint_amount">amount</string>

    <string name="lbl_name">Farmer\'s Name</string>
    <string name="lbl_new_crop">add crop</string>
    <string name="lbl_remove_crop"></string>

    <string name="title_crop">Crop</string>
    <string name="title_landsize">Land Size\n(acres)</string>
    <string name="title_landsize_in_hectares">Land Size\n(hectares)</string>
    <string name="title_profitkgs">Expected price\n per Kg</string>

    <string name="txt_blank">...</string>

    <string name="size_labels">16sp</string>
    <string name="size_table_titles">16sp</string>
    <string name="title_price_per_bag">Price per 50Kg bag</string>
    <string name="title_fertilizer">Fertilizer</string>
    <string name="title_user_input">User Input</string>
    <string name="lbl_new_fertiliser">add fertilizer</string>
    <string name="lbl_amount_available">Amount available</string>
    <string name="lbl_btn_calculate">Calculate</string>
    <string name="results_title">Fertilizer optimization</string>
    <string name="header_crop_fertilizer_ratio">Application Rate-kg/Acre</string>
    <string name="header_crop_fertilizer_ratio_in_hectares">Application Rate-kg/Ha</string>
    <string name="results_label_total_fertilizer">Total fertilizer needed in an Acre</string>
    <string name="results_label_total_fertilizer_hectares">Total fertilizer needed in a Hectare</string>
    <string name="title_yield_increase">Yield Increases</string>
    <string name="title_net_returns">Net Returns</string>
    <string name="results_label_expected_averages">Expected Average Effects per Acre</string>
    <string name="results_label_expected_averages_in_hectares">Expected Average Effects per Hectare</string>
    <string name="results_label_net_returns">Total net returns to investiment in fertilizer</string>
    <string name="hint_crop_price_per_kg">price/Kg</string>
    <string name="hint_price_per_bag">price/50kg bag</string>
    <string name="menu_context_title">delete?</string>
    <string name="results_land_units_prompt">Land units</string>
    <string name="results_land_units_acres">Acres</string>
    <string name="results_land_units_hectares">Hectares</string>
    <string name="about_version">Version 2.4</string>
    <string name="about_legal">All rights reserved. Grameen Foundatoin is not liable for any damage incurred from use of this software.</string>
    <string name="action_about">About</string>

    <style name="invisible_buttons_text">
        <item name="android:textColor">#999999</item>
        <item name="android:textStyle">bold|italic</item>
        <item name="android:background">@android:color/transparent</item>
    </style>
    <style name="italics_label">
        <item name="android:textStyle">italic</item>
    </style>
    <style name="table_header_bg">
        <item name="android:background">#cccccc</item>
        <item name="android:textStyle">bold</item>
        <item name="android:typeface">sans</item>
        <item name="android:textAppearance">?android:attr/textAppearanceMedium</item>
        <item name="android:textSize">16sp</item>
        <item name="android:layout_margin">1dip</item>
    </style>
    <style name="labels_bold">
        <item name="android:textStyle">bold</item>
        <item name="android:typeface">sans</item>
        <item name="android:textAppearance">?android:attr/textAppearanceMedium</item>
        <item name="android:textSize">16sp</item>
        <item name="android:layout_marginLeft">5dp</item>
    </style>

    <color name="menu_bg">#cccccc</color>
</resources>
