<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/scroll_view"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
        <TextView android:id="@+id/lbl_name"
                  android:layout_width="wrap_content"
                  android:layout_height="40dip"
                  android:text="@string/lbl_name"
                  android:gravity="center_vertical"
                  android:layout_marginLeft="10dip"
                  style="@style/labels_bold"/>
        <EditText android:id="@+id/txt_name"
                  android:hint="@string/hint_farmer"
                  android:layout_height="wrap_content"
                  android:layout_width="fill_parent"
                  android:layout_alignTop="@id/lbl_name"
                  android:layout_toRightOf="@id/lbl_name"
                  android:layout_marginLeft="10dip"
                  android:inputType="text"/>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                      android:id="@+id/crops_layout"
                      android:orientation="vertical"
                      android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:layout_below="@id/txt_name">

            <TableLayout android:id="@+id/table_crops"
                         android:layout_height="match_parent"
                         android:layout_width="match_parent">
                <TableRow android:id="@+id/table_crops_header"
                          android:layout_width="match_parent"
                          android:layout_height="match_parent"
                          android:background="#b3b3b3"
                          android:layout_marginTop="1dip" android:layout_marginLeft="1dip" android:layout_marginRight="1dip">
                    <TextView android:padding="5dp"
                              android:id="@+id/table_coulumn1"
                              android:layout_width="0px"
                              android:layout_height="match_parent"
                              android:text="@string/title_crop"
                              android:layout_weight="0.4"
                              style="@style/table_header_bg"
                              android:gravity="center_vertical"/>
                    <TextView android:padding="5dp"
                              android:id="@+id/textView1"
                              android:layout_width="0px"
                              android:layout_height="match_parent"
                              android:text="@string/title_landsize"
                              android:layout_weight="0.3"
                              style="@style/table_header_bg"
                              android:gravity="center_vertical|center_horizontal"/>
                    <TextView android:padding="5dp"
                              android:id="@+id/textView1"
                              android:layout_width="0px"
                              android:layout_height="match_parent"
                              android:text="@string/title_profitkgs"
                              android:layout_weight="0.3"
                              style="@style/table_header_bg"
                              android:gravity="center_vertical|center_horizontal"/>
                </TableRow>

                <TableRow android:id="@+id/tableRow1"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:background="#b3b3b3"
                          android:layout_marginBottom="1dip" android:layout_marginLeft="1dip" android:layout_marginRight="1dip">
                    <Spinner android:id="@+id/cmb_crops"
                             android:padding="5dp"
                             android:layout_width="0px"
                             android:layout_height="match_parent"
                             android:layout_weight="0.4"
                             android:spinnerMode="dialog"
                             android:background="#e6e6e6" android:layout_margin="1dip"/>
                    <EditText android:id="@+id/figure_landsize"
                              android:padding="5dp"
                              android:layout_width="0px"
                              android:layout_height="match_parent"
                              android:hint="@string/hint_landsize"
                              android:layout_weight="0.3"
                              android:inputType="number"
                              android:background="#e6e6e6" android:layout_margin="1dip"/>
                    <EditText android:id="@+id/figure_profit"
                              android:padding="5dp"
                              android:layout_width="0px"
                              android:layout_height="match_parent"
                              android:hint="@string/hint_profit"
                              android:layout_weight="0.3"
                              android:inputType="number"
                              android:background="#e6e6e6" android:layout_margin="1dip"/>
                </TableRow>
            </TableLayout>

        </LinearLayout>

        <Button android:id="@+id/btn_add_row"
                android:layout_width="wrap_content"
                android:layout_height="50dip"
                android:layout_below="@id/crops_layout"
                android:layout_marginTop="7dip"
                android:layout_alignLeft="@id/crops_layout"
                android:drawableLeft="@android:drawable/ic_input_add"
                android:radius="10dp"
                android:text="@string/lbl_new_crop"
                android:padding="10dp"
                style="@style/invisible_buttons_text"
                android:background="@android:color/transparent"/>
        <Button android:id="@+id/btn_remove_row"
                android:layout_width="wrap_content"
                android:layout_height="50dip"
                android:layout_marginTop="7dip"
                android:layout_below="@id/crops_layout"
                android:layout_alignRight="@id/crops_layout"
                android:gravity="right"
                android:drawableLeft="@android:drawable/ic_delete"
                android:radius="10dp"
                android:text="@string/lbl_remove_crop"
                android:padding="10dp"
                android:background="@android:color/transparent"/>

        <TableLayout android:id="@+id/table_fertilizers"
                     android:layout_height="match_parent"
                     android:layout_width="match_parent"
                     android:layout_below="@id/btn_add_row"
                     android:layout_marginTop="8dip">
            <TableRow android:id="@+id/table_fertilizers_header"
                      android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:background="#b3b3b3"
                      android:layout_marginTop="1dip" android:layout_marginLeft="1dip" android:layout_marginRight="1dip">
                <TextView android:padding="5dp"
                          android:id="@+id/table_fertilizer_coulumn1"
                          android:layout_width="0px"
                          android:layout_height="match_parent"
                          android:text="@string/title_fertilizer"
                          android:layout_weight="0.5"
                          style="@style/table_header_bg"
                          android:gravity="center_vertical"/>
                <TextView android:padding="5dp"
                          android:id="@+id/table_fertilizer_coulumn2"
                          android:layout_width="0px"
                          android:layout_height="match_parent"
                          android:text="@string/title_price_per_bag"
                          android:layout_weight="0.5"
                          style="@style/table_header_bg"
                          android:gravity="center_vertical|center_horizontal"/>
            </TableRow>

            <TableRow android:id="@+id/tableFertilizerRow1"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:background="#b3b3b3"
                      android:layout_marginBottom="1dip" android:layout_marginLeft="1dip" android:layout_marginRight="1dip">
                <Spinner android:id="@+id/cmb_fertilzers"
                         android:layout_width="0px"
                         android:spinnerMode="dialog"
                         android:layout_height="match_parent"
                         android:layout_weight="0.5"
                         android:background="#e6e6e6" android:layout_margin="1dip"/>
                <EditText android:id="@+id/figure_price_per_bag"
                          android:layout_width="0px"
                          android:layout_height="match_parent"
                          android:hint="@string/hint_price_per_bag"
                          android:layout_weight="0.5"
                          android:inputType="number"
                          android:background="#e6e6e6" android:layout_margin="1dip"/>
            </TableRow>
        </TableLayout>

        <Button android:id="@+id/btn_add_fertilizer"
                android:layout_width="wrap_content"
                android:layout_height="50dip"
                android:layout_below="@id/table_fertilizers"
                android:layout_marginTop="7dip"
                android:layout_alignLeft="@id/crops_layout"
                android:drawableLeft="@android:drawable/ic_input_add"
                android:radius="10dp"
                android:text="@string/lbl_new_fertiliser"
                android:padding="10dp"
                style="@style/invisible_buttons_text">
        </Button>
        <Button android:id="@+id/btn_remove_fertilizer"
                android:layout_width="wrap_content"
                android:layout_height="50dip"
                android:layout_marginTop="7dip"
                android:layout_below="@id/table_fertilizers"
                android:layout_alignRight="@id/table_fertilizers"
                android:gravity="right"
                android:drawableLeft="@android:drawable/ic_delete"
                android:radius="10dp"
                android:text="@string/lbl_remove_crop"
                android:padding="10dp"
                android:background="@android:color/transparent"/>

        <TextView android:id="@+id/lbl_amount_available"
                  android:layout_alignLeft="@id/crops_layout"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/lbl_amount_available"
                  android:layout_below="@id/btn_add_fertilizer"
                  android:layout_marginTop="15dip"
                  android:gravity="left|center_vertical"
                  style="@style/labels_bold"/>
        <EditText android:id="@+id/txt_amount_available"
                  android:layout_height="wrap_content"
                  android:layout_width="fill_parent"
                  android:layout_marginLeft="15dip"
                  android:layout_toRightOf="@id/lbl_amount_available"
                  android:layout_alignTop="@id/lbl_amount_available"
                  android:gravity="left|bottom"
                  android:hint="@string/hint_amount"
                  android:inputType="number"/>

        <Button android:id="@+id/btn_calculate"
                android:layout_width="200dip"
                android:layout_height="50dip"
                android:layout_below="@id/lbl_amount_available"
                android:layout_margin="40dip"
                android:layout_marginBottom="40dip"
                android:text="@string/lbl_btn_calculate"
                android:layout_centerInParent="true"
                android:background="@drawable/button_background"/>
    </RelativeLayout>
</ScrollView>